[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-roster-utilities"
version = "1.3.0"
description = "A collection of utilities for sports roster data processing including high school name standardization, height conversion, location parsing, and web scraping"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Sports Roster Data"}
]
keywords = ["high school", "standardization", "normalization", "data cleaning", "education", "web scraping", "location parsing", "country names", "sports", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

dependencies = [
    "newspaper4k>=0.9.2",
    "pandas>=1.0.0",
    "pycountry>=22.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/Sports-Roster-Data/utilities"
"Bug Reports" = "https://github.com/Sports-Roster-Data/utilities/issues"
Source = "https://github.com/Sports-Roster-Data/utilities"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
